k8s/mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql-container
        image: docker/awesome-compose:aspnet-mssql_db
        resources:
          requests:
            cpu: "100m" # Request 0.1 CPU cores
            memory: "100Mi" # Request 100 MiB memory
          limits:
            cpu: "500m" # Limit to 0.5 CPU cores
            memory: "500Mi" # Limit to 500 MiB memory
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: mssql-data-pvc
