k8s/aspnet-app-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aspnet-app
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-app-deployment
  namespace: aspnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnet-app
  template:
    metadata:
      labels:
        app: aspnet-app
    spec:
      containers:
      - name: aspnet-app
        image: etahamad/apsnet-mssql:0.0.3
        resources:
          requests:
            cpu: "100m" # Request 0.1 CPU cores
            memory: "100Mi" # Request 100 MiB memory
          limits:
            cpu: "500m" # Limit to 0.5 CPU cores
            memory: "500Mi" # Limit to 500 MiB memory
        ports:
        - containerPort: 443
      - name: redis-container
        image: redis:latest
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi" 
          limits:
            cpu: "500m"
            memory: "500Mi"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: aspnet-app
  namespace: aspnet-app
spec:
  selector:
    app: aspnet-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnet-app-ingress
  namespace: aspnet-app
  annotations:
    spec.ingressClassName: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:362884572950:certificate/7a643a73-91b3-4627-b7b7-bb48403e4d46
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io.ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: webapp-etahamad.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: aspnet-app
            port:
              number: 80
